@@ -125,9 +125,7 @@ public:
     bool wasScrolledByUser() const;
     void setWasScrolledByUser(bool);
 
-#if PLATFORM(GDK)
     void layoutIfNeededRecursive();
-#endif
 
 private:
     void init();
