@@ -316,7 +316,6 @@ public:
 
     // WebFrame
     void initWithWebFrameView(IWebFrameView*, IWebView*, WebCore::Page*, WebCore::HTMLFrameOwnerElement*);
-    void layoutIfNeededRecursive(WebCore::FrameView* frameView);
     WebCore::Frame* impl();
     void invalidate();
     void receivedData(const char*, int, const WebCore::String&);
